Bug 313929 - There are two 'A4' entries in Page Size
Summary: There are two 'A4' entries in Page Size
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_language (other bugs)
Version First Reported In: 4.9.98 RC3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-26 16:38 UTC by André Marcelo Alvarenga
Modified: 2013-02-15 13:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2013-01-26 16:38:11 UTC
In Systemsettings choose Locale -> Country/Region & Language.
Other tab -> Page Size:

Reproducible: Always
Comment 1 Burkhard Lück 2013-01-27 11:56:51 UTC
kdebase/kde-runtime/kcontrol/locale/kcmlocale.cpp has two lines with:

m_ui->m_comboPageSize->addItem( ki18nc("Page size", "A4").toString( m_kcmLocale ),
Comment 2 Christoph Feck 2013-01-27 13:25:30 UTC
From looking at the source code, this is intended. The two most used options (A4, US Letter) are replicated at the top for faster access.
Comment 3 Christoph Feck 2013-02-15 13:01:54 UTC
Git commit 8a29700006073296923a50600ac94813c7243e42 by Christoph Feck.
Committed on 15/02/2013 at 14:00.
Pushed by cfeck into branch 'KDE/4.10'.

Insert a separator after two most used page sizes

This visually groups those to better explain why they
are duplicated in the list of page sizes below
FIXED-IN: 4.10.1
REVIEW: 108661

M  +2    -0    kcontrol/locale/kcmlocale.cpp

http://commits.kde.org/kde-runtime/8a29700006073296923a50600ac94813c7243e42