Insert a separator after two most used page sizes

This visually groups those to better explain why they
are duplicated in the list of page sizes below

BUG: 313929
FIXED-IN: 4.10.1
REVIEW: 108661